# forex

application/backend/: Dockerfile  Makefile  alembic.ini  entrypoint.sh  pyproject.toml
application/backend/core/application/api/: main.py
application/backend/core/domain/entities/: country_currency.py  currency_rate.py  relative_change.py  settings.py
application/backend/core/infra/: repositories.py
application/backend/core/infra/db/: models.py  session.py
application/backend/core/logic/: currency_service.py  parsing_service.py
application/backend/docker_compose/: app.yaml
application/frontend/: app.js  index.html
